# miRmap

./: .gitignore  README.md  justfile  pyproject.toml
.sourcehut/: arch.yml
src/mirmap/: evolution.py  if_exe_phast.py  if_lib_spatt.py  if_lib_viennarna.py  interval.py  model.py  prob.py  prob_binomial.py  prob_exact.py  scores.py  target.py  targetscan.py  targetscan_model.py  thermo.py  utils.py
src/mirmap_scripts/: mirmap.py
tests/: conftest.py  test_if_clib_spatt.py  test_if_exe_phast.py  test_if_lib_viennarna.py  test_target.py
tests/data/: ENST00000355526.fa  ENST00000597389.fa  NM_024573.fa  hsa-miR-3124-5p.fa
